--- a/webapp/index.html
+++ b/webapp/index.html
@@ -15,7 +15,7 @@
         src="resources/sap-ui-core.js"
         data-sap-ui-theme="sap_horizon"
         data-sap-ui-resource-roots='{
-            "mergetest": "./"
+            "mergeTested": "./"
         }'
         data-sap-ui-on-init="module:sap/ui/core/ComponentSupport"
         data-sap-ui-compat-version="edge"
@@ -26,9 +26,9 @@
 <body class="sapUiBody sapUiSizeCompact" id="content">
     <div
         data-sap-ui-component
-        data-name="mergetest"
+        data-name="mergeTested"
         data-id="container"
-        data-settings='{"id" : "mergetest"}'
+        data-settings='{"id" : "mergeTested"}'
         data-handle-validation="true"
     ></div>
 </body>
