--- a/webapp/test/integration/opaTests.qunit.html
+++ b/webapp/test/integration/opaTests.qunit.html
@@ -9,7 +9,7 @@
 		src="../../resources/sap-ui-core.js"
 		data-sap-ui-theme="sap_horizon"
 		data-sap-ui-resource-roots='{
-			"mergetest": "../../",
+			"mergeTested": "../../",
 			"integration": "./"
 		}'
 		data-sap-ui-animation-mode="none"
